# cliph

./: Cargo.toml  README.md  Trunk.toml  index.html  katex_render.js  styles.css
src/: lib.rs
src/core/: algebra.rs  ast.rs  eval.rs  mod.rs  parser.rs  utils.rs
src/math/: algebra.rs  ast.rs  diff.rs  eval.rs  format.rs  mod.rs  parser.rs
src/ui/: main.rs
src/ui/components/: app.rs  graph.rs  input.rs  mod.rs  output.rs
tests/: tests.rs
