[package]
name = "cliph"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cliph"
path = "src/ui/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
plotters = "0.3"
plotters-canvas = "0.3"
gloo = "0.11"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }


