[package]
name = "cliph"
version = "0.1.0"
edition = "2021"

[lib]
name = "cliph"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.11"
plotters = "0.3"
plotters-canvas = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
regex = "1.11.1"
ordered-float = "5.0.0"
